feat(loan): create new loan
