# docs/swagger.json
@@ -206,6 +206,56 @@
                 }
             }
         },
+        "/loans": {
+            "post": {
+                "security": [
+                    {
+                        "OAuth2Password": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Loan"
+                ],
+                "summary": "Create new loan (current user)",
+                "parameters": [
+                    {
+                        "description": "Create loan rquest",
+                        "name": "loan",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateNewLoanReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.BaseJSONResp"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.CreateNewLoanRespData"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "security": [
@@ -788,6 +838,60 @@
                 }
             }
         },
+        "dto.CreateNewLoanReq": {
+            "type": "object",
+            "required": [
+                "asset_name",
+                "otr",
+                "term_months"
+            ],
+            "properties": {
+                "asset_name": {
+                    "type": "string"
+                },
+                "otr": {
+                    "type": "number"
+                },
+                "term_months": {
+                    "$ref": "#/definitions/enum.LoanTermMonths"
+                }
+            }
+        },
+        "dto.CreateNewLoanRespData": {
+            "type": "object",
+            "properties": {
+                "admin_fee": {
+                    "type": "number"
+                },
+                "admin_fee_percentage": {
+                    "type": "number"
+                },
+                "asset_name": {
+                    "type": "string"
+                },
+                "interest_rate": {
+                    "type": "number"
+                },
+                "interest_rate_percentage": {
+                    "type": "number"
+                },
+                "otr": {
+                    "type": "number"
+                },
+                "ref_number": {
+                    "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/enum.LoanStatus"
+                },
+                "term_months": {
+                    "$ref": "#/definitions/enum.LoanTermMonths"
+                },
+                "user_uuid": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.CreateUserReq": {
             "type": "object",
             "required": [
@@ -811,7 +915,7 @@
                     "type": "string"
                 },
                 "current_salary": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "email": {
                     "type": "string"
@@ -854,10 +958,10 @@
                     "type": "string"
                 },
                 "current_limit": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "current_salary": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "email": {
                     "type": "string"
@@ -898,10 +1002,10 @@
                     "type": "string"
                 },
                 "current_limit": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "current_salary": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "email": {
                     "type": "string"
@@ -942,10 +1046,10 @@
                     "type": "string"
                 },
                 "current_limit": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "current_salary": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "email": {
                     "type": "string"
@@ -1082,7 +1186,7 @@
                     "type": "string"
                 },
                 "current_salary": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "email": {
                     "type": "string"
@@ -1122,7 +1226,7 @@
             ],
             "properties": {
                 "current_limit": {
-                    "type": "integer"
+                    "type": "number"
                 }
             }
         },
@@ -1130,7 +1234,7 @@
             "type": "object",
             "properties": {
                 "current_limit": {
-                    "type": "integer"
+                    "type": "number"
                 }
             }
         },
@@ -1145,7 +1249,7 @@
                     "type": "string"
                 },
                 "current_salary": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "email": {
                     "type": "string"
@@ -1180,10 +1284,10 @@
                     "type": "string"
                 },
                 "current_limit": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "current_salary": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "email": {
                     "type": "string"
@@ -1230,6 +1334,36 @@
                 }
             }
         },
+        "enum.LoanStatus": {
+            "type": "string",
+            "enum": [
+                "PENDING",
+                "APPROVED",
+                "REJECTED",
+                "PAID"
+            ],
+            "x-enum-varnames": [
+                "LoanStatus_PENDING",
+                "LoanStatus_APPROVED",
+                "LoanStatus_REJECTED",
+                "LoanStatus_PAID"
+            ]
+        },
+        "enum.LoanTermMonths": {
+            "type": "integer",
+            "enum": [
+                1,
+                2,
+                3,
+                6
+            ],
+            "x-enum-varnames": [
+                "LoanTermMonths_1",
+                "LoanTermMonths_2",
+                "LoanTermMonths_3",
+                "LoanTermMonths_6"
+            ]
+        },
         "enum.SortOrder": {
             "type": "string",
             "enum": [
@@ -1262,10 +1396,10 @@
                     "type": "string"
                 },
                 "current_limit": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "current_salary": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "email": {
                     "type": "string"
